--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "10.18.0",
     "rsbuild-plugin-google-analytics": "^1.0.0",
     "rsbuild-plugin-open-graph": "^1.0.0",
+    "rspress-plugin-font-open-sans": "^1.0.0",
     "rspress": "workspace:*",
     "ts-node": "^10.9.1",
     "typescript": "^5"
