--- a/packages/plugin-medium-zoom/package.json
+++ b/packages/plugin-medium-zoom/package.json
@@ -30,28 +30,20 @@
     "@types/react-dom": "^18",
     "typescript": "^5",
     "vitest": "0.34.1",
-    "react": "^18.2.0",
-    "@rspress/shared": "workspace:*"
+    "react": "^18.2.0"
   },
   "peerDependencies": {
     "@rspress/runtime": "^1.0.2"
   },
-  "sideEffects": [
-    "*.css",
-    "*.less",
-    "*.sass",
-    "*.scss"
-  ],
-  "files": [
-    "dist",
-    "src"
-  ],
+  "sideEffects": ["*.css", "*.less", "*.sass", "*.scss"],
+  "files": ["dist", "src"],
   "publishConfig": {
     "access": "public",
     "provenance": true,
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "medium-zoom": "1.1.0"
+    "medium-zoom": "1.1.0",
+    "@rspress/shared": "workspace:*"
   }
 }
