--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -22,7 +22,6 @@
     "node": ">=14.17.6"
   },
   "dependencies": {
-    "@rspress/shared": "workspace:*",
     "@modern-js/utils": "2.49.2",
     "react-markdown": "8.0.7",
     "react-docgen-typescript": "2.2.2",
@@ -30,6 +29,7 @@
     "remark-gfm": "3.0.1"
   },
   "devDependencies": {
+    "@rspress/shared": "workspace:*",
     "@types/mdast": "^3.0.10",
     "@types/node": "^18.11.17",
     "@types/react": "^18",
@@ -53,7 +53,11 @@
       "optional": true
     }
   },
-  "files": ["dist", "static", "mdx-meta-loader.cjs"],
+  "files": [
+    "dist",
+    "static",
+    "mdx-meta-loader.cjs"
+  ],
   "publishConfig": {
     "access": "public",
     "provenance": true,
