--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "packageManager": "pnpm@8.15.4",
   "lint-staged": {
     "*.{ts,tsx,js,jsx,mjs,cjs}": [
-      "biome lint . --diagnostic-level=warn"
+      "biome check . --apply --organize-imports-enabled=false --no-errors-on-unmatched"
     ],
     "package.json": [
       "pnpm run check-dependency-version"
