--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -51,7 +51,7 @@
     "upgrade": "modern upgrade"
   },
   "dependencies": {
-    "@rsbuild/core": "0.7.0-beta.4",
+    "@rsbuild/core": "0.7.0",
     "unified": "^10.1.2",
     "chalk": "4.1.2",
     "execa": "5.1.1",
