--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,8 +44,10 @@
     "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@modern-js/utils": "2.49.4",
-    "@rsbuild/core": "0.6.13",
-    "@rsbuild/plugin-react": "0.6.13",
+    "@rsbuild/core": "0.7.0",
+    "@rsbuild/plugin-less": "0.7.0",
+    "@rsbuild/plugin-react": "0.7.0",
+    "@rsbuild/plugin-sass": "0.7.0",
     "@rspress/theme-default": "workspace:*",
     "@rspress/runtime": "workspace:*",
     "@rspress/plugin-medium-zoom": "workspace:*",
