--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "2.3.0",
-    "@rsbuild/core": "0.6.13",
-    "@rsbuild/plugin-solid": "0.6.13",
-    "@rsbuild/plugin-babel": "0.6.13",
-    "@rsbuild/plugin-react": "0.6.13",
+    "@rsbuild/core": "0.7.0",
+    "@rsbuild/plugin-less": "0.7.0",
+    "@rsbuild/plugin-sass": "0.7.0",
+    "@rsbuild/plugin-solid": "0.7.0",
+    "@rsbuild/plugin-babel": "0.7.0",
+    "@rsbuild/plugin-react": "0.7.0",
     "@rspress/shared": "workspace:*",
     "@rspress/theme-default": "workspace:*",
     "qrcode.react": "^3.1.0",
