--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:website": "cross-env NX_DAEMON=false NX_REJECT_UNKNOWN_LOCAL_CACHE=0 nx run @rspress/docs:build",
     "preview:website": "cd packages/document && npm run preview",
     "update:modern": "ts-node ./scripts/update-modern.ts",
+    "update:rsbuild": "npx taze minor --include /rsbuild/ -w -r -l",
     "format": "biome format --write ./packages"
   },
   "engines": {
