--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -51,7 +51,7 @@
     "upgrade": "modern upgrade"
   },
   "dependencies": {
-    "@rsbuild/core": "0.7.8",
+    "@rsbuild/core": "1.0.0-alpha.0",
     "chalk": "4.1.2",
     "execa": "5.1.1",
     "fs-extra": "11.2.0",
