--- a/packages/document/tsconfig.json
+++ b/packages/document/tsconfig.json
@@ -6,16 +6,17 @@
       "i18n": ["./i18n.json"],
       "@theme": ["./theme"],
       "@/assets/*": ["./docs/public/*"],
-      "@/components/*": ["./components/*"],
+      "@/components/*": ["./theme/components/*"],
       "@zh/*": ["./docs/zh/*"],
       "@en/*": ["./docs/en/*"],
-    }
+    },
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   },
   "include": [
     "./rspress.config.ts",
     "docs/**/*",
     "src/**/*",
-    "components/**/*",
     "theme/**/*",
     "search.tsx"
   ],
