--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,10 +44,10 @@
     "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@modern-js/utils": "2.56.2",
-    "@rsbuild/core": "1.0.0-alpha.9",
-    "@rsbuild/plugin-less": "1.0.0-alpha.9",
-    "@rsbuild/plugin-react": "1.0.0-alpha.9",
-    "@rsbuild/plugin-sass": "1.0.0-alpha.9",
+    "@rsbuild/core": "1.0.1-beta.9",
+    "@rsbuild/plugin-less": "1.0.1-beta.9",
+    "@rsbuild/plugin-react": "1.0.1-beta.9",
+    "@rsbuild/plugin-sass": "1.0.1-beta.9",
     "@rspress/mdx-rs": "0.5.7",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
     "@rspress/plugin-container-syntax": "workspace:*",
