--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@rstack-dev/doc-ui": "^1.2.0",
     "@types/react": "^18.3.3",
     "framer-motion": "11.3.2",
     "rsbuild-plugin-google-analytics": "^1.0.0",
@@ -33,8 +34,5 @@
   },
   "files": [
     "docs"
-  ],
-  "dependencies": {
-    "rsfamily-doc-ui": "^1.1.2"
-  }
+  ]
 }
