--- a/packages/create-rspress/template/tsconfig.json
+++ b/packages/create-rspress/template/tsconfig.json
@@ -13,7 +13,7 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "src"],
+  "include": ["docs", "theme", "rspress.config.ts"],
   "mdx": {
     "checkMdx": true
   }
