--- a/e2e/fixtures/api-docgen/tsconfig.json
+++ b/e2e/fixtures/api-docgen/tsconfig.json
@@ -13,7 +13,7 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "src"],
+  "include": ["docs", "theme", "rspress.config.ts"],
   "mdx": {
     "checkMdx": true
   }
