--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,10 +44,10 @@
     "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@modern-js/utils": "2.58.2",
-    "@rsbuild/core": "1.0.1-beta.16",
-    "@rsbuild/plugin-less": "1.0.1-beta.16",
-    "@rsbuild/plugin-react": "1.0.1-beta.16",
-    "@rsbuild/plugin-sass": "1.0.1-beta.16",
+    "@rsbuild/core": "1.0.1-rc.0",
+    "@rsbuild/plugin-less": "1.0.1-rc.0",
+    "@rsbuild/plugin-react": "1.0.1-rc.0",
+    "@rsbuild/plugin-sass": "1.0.1-rc.0",
     "@rspress/mdx-rs": "0.5.7",
     "@rspress/plugin-auto-nav-sidebar": "workspace:*",
     "@rspress/plugin-container-syntax": "workspace:*",
