--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "dev": "modern build -w",
     "build": "modern build",
+    "build:rslib": "rslib build",
     "reset": "rimraf ./**/node_modules",
     "test": "vitest run --passWithNoTests"
   },
