--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,8 @@
   "scripts": {
     "dev": "modern build -w",
     "build": "modern build",
+    "build:rslib:wip": "rslib build",
+    "--wip--": "tailwind",
     "reset": "rimraf ./**/node_modules",
     "test": "vitest run --passWithNoTests"
   },
