--- a/packages/modern-plugin-rspress/package.json
+++ b/packages/modern-plugin-rspress/package.json
@@ -21,7 +21,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "new": "modern new",
-    "build": "modern build",
+    "build:rslib": "rslib build",
     "dev": "modern build --watch"
   },
   "dependencies": {
