--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -44,6 +44,8 @@
   "scripts": {
     "dev": "modern build -w",
     "build": "modern build",
+    "build:rslib:wip": "rslib build",
+    "--wip--": "export * from external module",
     "build:watch": "modern build -w",
     "test": "vitest run",
     "reset": "rimraf ./**/node_modules",
