--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.1/schema.json",
   "organizeImports": {
     "enabled": true
   },
@@ -82,7 +82,9 @@
         "useValidAnchor": "off",
         "noSvgWithoutTitle": "off",
         "useHeadingContent": "off",
-        "useKeyWithClickEvents": "off"
+        "useKeyWithClickEvents": "off",
+        "noLabelWithoutControl": "off",
+        "noAriaHiddenOnFocusable": "off"
       }
     }
   }
