--- a/.github/ISSUE_TEMPLATE/feature-request.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.en-US.yml
@@ -9,7 +9,7 @@ body:
         Thanks for submitting new feature requests! Before submitting, please note:
 
          - Confirmed that this is a common feature and cannot be implemented through existing APIs.
-         - Make sure you searched in the [Issues](https://github.com/web-infra-dev/rspress/issues) and didn't find the same request.
+         - Make sure you've searched in the [Issues](https://github.com/web-infra-dev/rspress/issues) and haven't found the same issue.
          - You can discuss the feature in [Discussions](https://github.com/web-infra-dev/rspress/discussions) first.
 
   - type: textarea
