--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -45,7 +45,7 @@
     "hast-util-from-html": "^2.0.3",
     "html-to-text": "^9.0.5",
     "htmr": "^1.0.2",
-    "is-html": "^3.1.0",
+    "htmlparser2": "^9.1.0",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
@@ -61,7 +61,6 @@
     "@types/body-scroll-lock": "^3.1.2",
     "@types/hast": "3.0.4",
     "@types/html-to-text": "^9.0.4",
-    "@types/is-html": "^2.0.2",
     "@types/jest": "~29.5.14",
     "@types/lodash-es": "^4.17.12",
     "@types/mdast": "^4.0.4",
