refactor: use esm mdx-loader rather than cjs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,9 +44,7 @@
     "src/shared",
     "index.html",
     "runtime.ts",
-    "theme.ts",
-    "loader.cjs",
-    "compiled"
+    "theme.ts"
   ],
   "scripts": {
     "build": "modern build",
