chore(workflow): use nx default cache directory

--- a/.github/workflows/test-Windows.yml
+++ b/.github/workflows/test-Windows.yml
@@ -61,7 +61,7 @@ jobs:
         id: nx-cache
         uses: actions/cache@v4
         with:
-          path: .nx-cache
+          path: .nx/cache
           key: nx-${{ github.ref_name }}-${{ runner.os }}-${{ github.sha }}
           restore-keys: |
             nx-${{ github.ref_name }}-${{ runner.os }}
