--- a/nx.json
+++ b/nx.json
@@ -4,8 +4,7 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["dev", "build", "test"],
-        "cacheDirectory": ".nx-cache"
+        "cacheableOperations": ["dev", "build", "test"]
       }
     }
   },
