--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -77,6 +77,7 @@
     "lodash-es": "^4.17.21",
     "mdast-util-mdxjs-esm": "^1.3.1",
     "memfs": "^4.17.0",
+    "picocolors": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
