--- a/packages/plugin-container-syntax/tsconfig.json
+++ b/packages/plugin-container-syntax/tsconfig.json
@@ -11,10 +11,7 @@
     "rootDir": "src",
     "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "skipLibCheck": true
   },
   "references": [
     {
