--- a/packages/plugin-preview/tsconfig.json
+++ b/packages/plugin-preview/tsconfig.json
@@ -13,10 +13,7 @@
     "rootDir": ".",
     "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "skipLibCheck": true
   },
   "include": [
     "src",
