--- a/packages/plugin-client-redirects/tsconfig.json
+++ b/packages/plugin-client-redirects/tsconfig.json
@@ -11,10 +11,7 @@
     "rootDir": ".",
     "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "skipLibCheck": true
   },
   "references": [
     {
