--- a/packages/plugin-last-updated/tsconfig.json
+++ b/packages/plugin-last-updated/tsconfig.json
@@ -12,10 +12,7 @@
     "rootDir": "src",
     "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "skipLibCheck": true
   },
   "references": [
     {
