--- a/packages/plugin-typedoc/tsconfig.json
+++ b/packages/plugin-typedoc/tsconfig.json
@@ -10,10 +10,7 @@
     "rootDir": ".",
     "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "skipLibCheck": true
   },
   "include": ["src", "vitest.config.ts", "index.d.ts", "modern.config.ts"],
   "exclude": ["node_modules", "dist"]
