--- a/packages/plugin-playground/package.json
+++ b/packages/plugin-playground/package.json
@@ -31,8 +31,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@mdx-js/mdx": "2.3.0",
