--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,8 +49,7 @@
   "scripts": {
     "build": "modern build",
     "dev": "modern build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@mdx-js/loader": "2.3.0",
@@ -109,8 +108,7 @@
     "remark-rehype": "^10.1.0",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.5.3",
-    "vitest": "2.1.9"
+    "typescript": "^5.5.3"
   },
   "engines": {
     "node": ">=14.17.6"
