--- a/packages/plugin-api-docgen/package.json
+++ b/packages/plugin-api-docgen/package.json
@@ -19,8 +19,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rspress/shared": "workspace:*",
