--- a/packages/plugin-last-updated/package.json
+++ b/packages/plugin-last-updated/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rspress/shared": "workspace:*"
@@ -41,8 +40,7 @@
     "@types/react-dom": "^18.3.5",
     "execa": "8.0.1",
     "react": "^18.3.1",
-    "typescript": "^5.5.3",
-    "vitest": "2.1.9"
+    "typescript": "^5.5.3"
   },
   "engines": {
     "node": ">=14.17.6"
