--- a/packages/plugin-preview/package.json
+++ b/packages/plugin-preview/package.json
@@ -18,8 +18,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rsbuild/core": "1.2.3",
