--- a/packages/plugin-rss/package.json
+++ b/packages/plugin-rss/package.json
@@ -27,8 +27,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rspress/shared": "workspace:*",
@@ -40,8 +39,7 @@
     "@types/node": "^18.11.17",
     "@types/react": "^18.3.18",
     "react": "^18.3.1",
-    "typescript": "^5.5.3",
-    "vitest": "2.1.9"
+    "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "react": ">=17.0.0",
