--- a/packages/plugin-shiki/package.json
+++ b/packages/plugin-shiki/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rspress/shared": "workspace:*",
@@ -45,8 +44,7 @@
     "@types/react-dom": "^18.3.5",
     "react": "^18.3.1",
     "typescript": "^5.5.3",
-    "unified": "^10.1.2",
-    "vitest": "2.1.9"
+    "unified": "^10.1.2"
   },
   "engines": {
     "node": ">=14.17.6"
