--- a/packages/plugin-typedoc/package.json
+++ b/packages/plugin-typedoc/package.json
@@ -25,8 +25,7 @@
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run --passWithNoTests"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rspress/shared": "workspace:*",
@@ -41,8 +40,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "react": "^18.3.1",
-    "typescript": "^5.5.3",
-    "vitest": "2.1.9"
+    "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "rspress": "workspace:^1.41.1"
