--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -33,8 +33,7 @@
   "scripts": {
     "build": "rslib build",
     "build:watch": "rslib build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "vitest run"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@rsbuild/core": "1.2.3",
