--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -41,8 +41,7 @@
   "scripts": {
     "build": "modern build",
     "dev": "modern build -w",
-    "reset": "rimraf ./**/node_modules",
-    "test": "echo nothing"
+    "reset": "rimraf ./**/node_modules"
   },
   "dependencies": {
     "@mdx-js/react": "2.3.0",
@@ -74,8 +73,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "gray-matter": "4.0.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.5.3",
-    "vitest": "2.1.9"
+    "typescript": "^5.5.3"
   },
   "engines": {
     "node": ">=14.17.6"
