fix: search code block

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "husky": "^9.1.7",
     "lint-staged": "~15.4.3",
     "nx": "20.4.0",
+    "path-serializer": "0.3.4",
     "playwright": "1.47.2",
     "prettier": "3.4.2",
     "prettier-plugin-packagejson": "^2.5.8",
