--- a/packages/plugin-playground/tsconfig.json
+++ b/packages/plugin-playground/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": "src",
-    "rootDir": "src",
-    "noUnusedLocals": false
+    "rootDir": "src"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
