--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -24,6 +24,7 @@
       "default": "./dist/index.js"
     },
     "./server": {
+      "types": "./server.d.ts",
       "default": "./server.js"
     }
   },
@@ -31,7 +32,8 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "server.js"
+    "server.js",
+    "server.d.ts"
   ],
   "scripts": {
     "build": "rslib build",
