--- a/packages/document/package.json
+++ b/packages/document/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rspress/docs",
-  "version": "1.42.0",
+  "version": "1.42.1-canary-20240227",
   "repository": {
     "type": "git",
     "url": "https://github.com/web-infra-dev/rspress",
